Add CodeCov for test

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ script:
   - make
   - clang -coverage -O0 src/main.c src/skob.c -o bin/skob
   - ./bin/skob
-  - gcov src/main.c src/skob.c 
+  - gcov src/main.c src/skob.c
+  - clang -coverage -O0 test/main.c test/skob_test.c -o bin/skobt
+  -./bin/skobt
+  - gcov test/main.c test/skob_test.c
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
