--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - gcov src/main.c src/skob.c
   - clang -coverage -O0 -I thirdparty test/main.c test/skob_test.c src/skob.c -o bin/skobt
   - ./bin/skobt
-  - gcov test/main.c test/skob_test.c
+  - gcov test/skob_test.c
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
