--- a/.codecov.yml
+++ b/.codecov.yml
@@ -19,10 +19,18 @@ parsers:
       loop: yes
       method: no
       macro: no
-
+      
+changes:                   
+  default:
+    enabled: yes             
+    branches: null           
+    if_no_uploads: error
+    if_not_found: success
+    if_ci_failed: error
+    
 ignore:
-  - "thirdparty/ctest.h"
-
+  - "thirdparty/*"
+  
 comment:
   layout: "header, diff"
   behavior: default
