--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: c
 sudo: false
 script:
   - make
+  - find . -name '*.gcda' -delete
   - clang -coverage -O0 src/main.c src/skob.c -o bin/skob
   - ./bin/skob
   - gcov src/main.c src/skob.c
